--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
 <div id="app">
     <g-button></g-button>
 </div>
-<script src="./node_modules/vue/dist/vue.min.js"></script>
-<script src="button.js"></script>
-<script>
- new Vue({
-     el: '#app'
- })
-</script>
+<script src="./src/index.js"></script>
 </body>
 </html>
