--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UI轮子</title>
-    <style>
-        * { box-sizing: border-box;margin: 0;padding: 0; }
-        :root {
-            --button-height: 32px;
-            --button-bg: white;
-            --button-active-bg: #eee;
-            --font-size: 14px;
-            --border-radius: 4px;
-            --color: #333;
-            --border-color: #999;
-            --border-color-hover: #666;
-        }
-        body {
-            font-size: var(--font-size);
-        }
-        #app {
-            margin: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="./src/_var.scss">
 </head>
 <body>
 <div id="app">
