--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <div id="app">
     <g-button icon="setting" icon-position="left" :loading="loading" @click.native="loading=!loading">按钮</g-button>
     <g-button icon="setting" icon-position="right" :loading="loading" @click.native="loading=!loading">按钮</g-button>
-    <g-button icon="left" icon-position="left">按钮</g-button>
-    <g-button icon="right" icon-position="left">按钮</g-button>
-    <g-button icon="down" icon-position="left">按钮</g-button>
-    <g-button icon="download" icon-position="left">按钮</g-button>
-    <g-button icon="thumb_up" icon-position="left">点赞</g-button>
-    <g-button icon="loading" icon-position="left">加载中</g-button>
-    <g-button icon-position="left">点赞</g-button>
+
+    <g-button-group>
+        <g-button icon="left" icon-position="left">按钮</g-button>
+        <g-button>更多</g-button>
+        <g-button icon="right" icon-position="right">按钮</g-button>
+    </g-button-group>
+
 </div>
 <script src="./src/index.js"></script>
 <script src="//at.alicdn.com/t/font_1443738_dl02efruz0o.js"></script>
